--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Kitty kitty Day</title>
+    <link rel="icon" type="image/gif" href="assets/img/Totoro.gif" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
